First commited as before_69413_rev2